<resources>
    <string name="app_name">Magestore LIB</string>

    <!-- Strings related to single words -->
    <string name="add">Add</string>
    <string name="apply">Apply</string>
    <string name="avaibles">Avaibles</string>
    <string name="availability">Availability</string>
    <string name="back">Back</string>
    <string name="bad">Bad</string>
    <string name="best">Best</string>
    <string name="better">Better</string>
    <string name="cancel">Cancel</string>
    <string name="check">Check</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="code">Code</string>
    <string name="confirm">Confirm</string>
    <string name="dashboard">Customer</string>
    <string name="decrease">Decrease</string>
    <string name="delete">Delete</string>
    <string name="demo">Demo</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="error">Error</string>
    <string name="good">Good</string>
    <string name="group">Group</string>
    <string name="guest">Guest</string>
    <string name="history">History</string>
    <string name="hold">Hold</string>
    <string name="increase">Increase</string>
    <string name="insert">Insert</string>
    <string name="item">Item</string>
    <string name="name">Name</string>
    <string name="never">Never</string>
    <string name="no">No</string>
    <string name="note">Note</string>
    <string name="notify">Notify</string>
    <string name="notification">Notification</string>
    <string name="number">Number</string>
    <string name="ok">OK</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reload</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="state">State</string>
    <string name="tax">Tax</string>
    <string name="telephone">Telephone</string>
    <string name="total">Total</string>
    <string name="update">Update</string>
    <string name="use">Use</string>
    <string name="yes">Yes</string>

    <!-- Strings related to error message -->
    <string name="err_no_network_connection">No network connection, Pls check yout network settings</string>
    <string name="err_field_required">This field is required</string>
    <string name="err_field_email_required">Invalid email address</string>
    <string name="err_no_data">There is no data to display</string>

    <!-- Strings related to confirm message -->
    <string name="ask_are_you_sure">Are you sure?</string>
    <string name="ask_are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="ask_are_you_sure_to_save">Are you sure to save?</string>
    <string name="ask_are_you_sure_to_update">Are you sure to update?</string>
    <string name="ask_are_you_sure_to_remove">Are you sure to remove?</string>
    <string name="ask_are_you_sure_to_cancel">Are you sure to cancel?</string>
    <string name="ask_are_you_sure_to_close">Are you sure to close?</string>
    <string name="ask_are_you_sure_to_change_store">Are you sure to change store?</string>

    <!-- Strings related to dialog title -->
    <string name="title_confirm">Please confirm</string>
    <string name="title_confirm_delete">Please confirm delete</string>
    <string name="title_confirm_save">Please confirm save</string>
    <string name="title_confirm_update">Please confirm update</string>
    <string name="title_confirm_remove">Please confirm remove</string>
    <string name="title_confirm_cancel">Please confirm cancel</string>
    <string name="title_confirm_close">Please confirm close</string>

    <!-- Strings related to dialog error -->
    <string name="dialog_error">Error</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_change_store">Change Store</string>
    <string name="maximum_quantity_config">Please enter a value less than or equal to %1$s</string>
    <string name="maximum_quantity_integer">Please enter a value less than or equal to 99999999</string>
    <string name="maximum_quantity_decimal">Please enter a value less than or equal to 99999999.9999</string>

    <string name="msg_press_to_reload">\nPress here to reload</string>
    <string name="msg_no_data">No data to display</string>

    <!--Keyboard-->
    <string name="number_keyboard_0">0</string>
    <string name="number_keyboard_1">1</string>
    <string name="number_keyboard_2">2</string>
    <string name="number_keyboard_3">3</string>
    <string name="number_keyboard_4">4</string>
    <string name="number_keyboard_5">5</string>
    <string name="number_keyboard_6">6</string>
    <string name="number_keyboard_7">7</string>
    <string name="number_keyboard_8">8</string>
    <string name="number_keyboard_9">9</string>
    <string name="number_keyboard_00">00</string>
</resources>

