<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/im_arrow_up"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-15dp"
        android:layout_marginTop="-10dp"
        android:rotation="180"
        android:src="@drawable/ic_arrow_down" />

    <ImageView
        android:id="@+id/im_arrow_left"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:rotation="90"
        android:layout_marginRight="-20dp"
        android:src="@drawable/ic_arrow_down"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/im_arrow_up"
        android:layout_toRightOf="@+id/im_arrow_left"
        android:background="#ddd"
        android:orientation="vertical"
        android:paddingLeft="@dimen/layout_margin_20"
        android:paddingRight="@dimen/layout_margin_20">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_20"
            android:layout_marginTop="@dimen/layout_margin_20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_number_1"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_marginRight="@dimen/layout_margin_20"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_1"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_number_2"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_marginRight="@dimen/layout_margin_20"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_2"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_number_3"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_3"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_number_4"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_marginRight="@dimen/layout_margin_20"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_4"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_number_5"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_marginRight="@dimen/layout_margin_20"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_5"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_number_6"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_6"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_number_7"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_marginRight="@dimen/layout_margin_20"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_7"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_number_8"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_marginRight="@dimen/layout_margin_20"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_8"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_number_9"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_9"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_20"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_number_00"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_marginRight="@dimen/layout_margin_20"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_00"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_number_0"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_marginRight="@dimen/layout_margin_20"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/number_keyboard_0"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size_20" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_number_delete"
                    android:layout_width="@dimen/popup_staff_permiss_keyboard_size"
                    android:layout_height="@dimen/popup_staff_permiss_keyboard_size"
                    android:background="@drawable/number_keyboard_bg"
                    android:clickable="true">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_keyboard_delete" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/im_arrow_down"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/ll_keyboard"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-10dp"
        android:layout_marginTop="-20dp"
        android:src="@drawable/ic_arrow_down" />
</RelativeLayout>